# legal-doc-analyzer

./: .replit  Procfile  analyzer.py  document_processor.py  main.py  pyproject.toml  replit.nix  utils.py
.streamlit/: config.toml
