[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.46.0",
    "antiword>=0.1.0",
    "docx2txt>=0.8",
    "docx>=0.2.4",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "streamlit>=1.42.2",
    "textract>=1.6.5",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
]
